# llm-ops-using-sdd

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  Dockerfile  IMPLEMENTATION_STATUS.md  SPEC_COMPLIANCE_REPORT.md
backend/: ENV_SETUP.md  alembic.ini  env.example  kube.conf  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_storage_uri_to_model_catalog.py  0003_add_runtime_image_to_serving_endpoints.py  0004_add_output_model_fields_to_training_jobs.py  0004_add_output_model_fields_to_training_jobs.sql  0005_add_resource_fields_to_serving_endpoints.py  0006_add_integration_configs_table.py  0007_add_experiment_runs_table.py  0008_add_serving_deployments_table.py  0009_add_workflow_pipelines_table.py  0010_add_registry_models_table.py  0011_add_dataset_versions_table.py  0012_add_train_job_spec_to_training_jobs.py  0013_add_deployment_spec_to_serving_endpoints.py  0014_add_model_family_and_dataset_type.py  0015_make_model_family_and_dataset_type_required.py
backend/scripts/: README.md  migrate_experiments_to_mlflow.py  migrate_serving_to_kserve.py  rollback_integrations.py  seed_data.py  validate_existing_serving_endpoints.py  validate_existing_training_jobs.py
backend/src/: __init__.py
backend/src/api/: app.py
backend/src/catalog/: __init__.py  models.py  repositories.py  schemas.py
backend/src/core/: database.py  image_config.py  observability.py  settings.py
backend/src/governance/: __init__.py  middleware.py  repositories.py  schemas.py
(+284 files in other folders)
